# oradumper

./: .gitignore  CHANGELOG.md  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  TODO  bootstrap  configure.ac  lint.am
replace/: Makefile.am  strdup.c
src/: Makefile.am
src/lib/: Makefile.am  oradumper.h  oradumper.pc  oradumper_extproc.c  oradumper_extproc.pc  oradumper_int.c  oradumper_int.h
src/prog/: Makefile.am  main.c
src/sql/: README  admin.sql  oradumper.sql  test.sql
test/: Makefile.am  check_coverage  check_unistring.c  check_userid  oradumper_check.c  oradumper_test  oradumper_test.sql  query0.lis.ref  query1.lis.ref  query2.lis.ref  query4.lis.ref  query5.lis.ref  query6.lis.ref  query8.lis.ref  query_data_types.lis.ref  test1.err.ref  test2.err.ref  test3.err.ref  test3.log.ref  usage.txt.ref
trunk/oradumper/: AUTHORS  INSTALL  Makefile.am  NEWS  README  bootstrap  configure.ac  lint.am
trunk/oradumper/replace/: Makefile.am  malloc.c  strdup.c
trunk/oradumper/src/: Makefile.am
trunk/oradumper/src/lib/: Makefile.am  oradumper.h  oradumper.pc  oradumper.splintrc  oradumper_extproc.pc  oradumper_int.c  oradumper_int.h
trunk/oradumper/src/prog/: Makefile.am  ansi2knr.c  main.c
trunk/oradumper/src/sql/: README  admin.sql
trunk/oradumper/test/: Makefile.am  check_userid  oradumper_check.c  oradumper_test  oradumper_test.sql  query1.lis.ref  query2.lis.ref  query3.lis.ref  query4.lis.ref  query7.lis.ref  query8.lis.ref  query_data_types.lis.ref  test.sql  usage.txt.ref
